Register works!
Signed-off-by: adammharris <harrisadam42103@gmail.com>